# drillize_back

./: .cursorignore  .gitconfig  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  settings.json
alembic/: env.py
alembic/versions/: 001_.py  002_.py
conf/alembic/: doc.txt
conf/git/: doc.txt
conf/logging/: logging.conf
conf/mail/: doc.txt
conf/nginx/: config_user.txt  drillize.com.conf  nginx.conf
conf/nltk/: doc.txt
conf/postgresql/: create_database.txt
conf/ssl/: doc.txt
conf/users/: doc.txt
conf/uvicorn/: drillize.uvicorn.service
data/Python query/: 0001 Что такое python?.md  0002 В каком году написана первая статья про python.md  0003 Какие есть типы данных в python.md  0003 Какие типы данных есть в python? На какие классы делятся?.md  0004 Что такое лямбда-функция? Какое у неё назначение?.md  0005 Что такое PEP 8?.md  0006 Как получить документацию по атрибутам объекта?.md  0007 Что такое docstring?.md  0008 В чём разница между типами list и tuple?.md  0009 Может ли быть индекс списка отрицательным?.md  0010 Что значит конструкция pass?.md  0011 Чем отличаются многопоточное и многопроцессорное приложение?.md  0012 Как просмотреть методы объекта?.md  0013 Что такое *args и **kwargs в определении функции?.md  0014 Python полностью поддерживает ООП?.md  0015 Что такое globals() и locals()?.md  0016 Что хранится в атрибуте __dict__?.md  0017 Как проверить файл .py на синтаксические ошибки, не запуская его?.md  0018 Зачем в python используется ключевое слово self?.md  0019 Что такое декоратор? Как написать собственный?.md  0020 Что может быть ключом в словаре?.md  0021 В чём разница между пакетами и модулями?.md  0022 Как перевести строку, содержащую двоичный код (1 и 0), в число?.md  0023 Для чего используется функция __init__?.md  0024 Что такое слайс(slice)?.md  0025 Как проверить, что один кортеж содержит все элементы другого кортежа?.md  0026 Почему пустой список нельзя использовать как аргумент по умолчанию?.md  0027 Что такое @classmethod, @staticmethod, @property?.md  0028 Что такое синхронный код?.md  0029 Что такое асинхронный код? Приведите пример..md  0030 Каким будет результат следующего выражения?.md  0031 Для чего нужен метод id()?.md  0032 Что такое итератор?.md  0033 Что такое генератор? Чем отличается от итератора?.md  0034 Для чего используется ключевое слово yield?.md  0035 Чем отличаются __iter__ и __next__?.md  0036 Что такое контекстный менеджер?.md  0037 Как сделать python-скрипт исполняемым в различных операционных системах?.md  0038 Как сделать копию объекта? Как сделать глубокую копию объекта?.md  0039 Опишите принцип работы сборщика мусора в python..md  (+363 more)
data/courses/: data_example.json
data/courses/course 5 python junior/: course_info.json
data/courses/course 7 python senior/: course_info.json
deploy/: deploy_local.sh  deploy_server_step_1.sh  deploy_server_step_2.sh  deploy_server_step_3.sh  deploy_server_step_4.sh  deploy_tmp.sh
public/static_back/: robots.txt  sitemap.xml
src/: config.py  database.py  models.py
src/api/: auth.py  init.py  lessons.py  users.py
src/api/contents/: contents.py  (+2 more)
src/common/: utils.py
src/filters/: main_filters.py
src/middleware/: limit.py
src/pages/: service.py  site.py
src/schemas/: user.py
templates/: base.html
templates/includes/: footer.html  header.html  scripts.html  svg_check.html  svg_symbols.html
templates/service/: course_finish.html  course_start.html  query.html
templates/site/: index.html
(+23 files in other folders)
