[project]
name = "sd-back-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.12",
    "bcrypt>=5.0.0",
    "black>=25.9.0",
    "fastapi>=0.120.0",
    "fastapi-csrf-protect>=1.0.7",
    "greenlet>=3.2.4",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "mypy>=1.18.2",
    "passlib>=1.7.4",
    "pillow>=12.0.0",
    "pydantic[email]>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "ruff>=0.14.2",
    "sentry-sdk[fastapi]>=2.42.1",
    "slowapi>=0.1.9",
    "sqladmin>=0.21.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "itsdangerous>=2.2.0",
    "poetry>=2.2.1",
    "platformdirs>=4.5.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.0.0",
    "factory-boy>=3.3.3",
    "faker>=37.12.0",
    "pytest-xdist>=3.8.0",
    "pytest-html>=4.1.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 120
target-version = "py314"
fix = true

# Что не анализировать глобально
extend-exclude = [
  "alembic/versions/*",
  "src/app/migrations/*",
  "public/*",
]

# Настройки для ruff format
[tool.ruff.format]
# Исключить эти пути из форматирования
exclude = [
  "alembic/versions/*",
  "src/app/migrations/*",
  "public/*",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "A", # flake8-builtins
    "S", # flake8-bandit (безопасность)
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "RET", # flake8-return
]
ignore = [
    "ANN204", # нет аннотации возврата у __init__
    "A002", # разрешаем аргументы с именами как у встроенных
    "S101", # использование assert
    "B008", # вызовы функций с аргументами по умолчанию
    "C901", # слишком сложная функция
    "COM812", # конфликт с форматтером ruff, trailing comma (запятая в конце структур)

]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]
"src/app/models/**/*.py" = ["E501"]  # Игнорировать длинные строки в моделях

[tool.mypy]
# Основные настройки mypy
python_version = "3.14"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = false
strict = false
# Разрешить импорты без stub файлов
ignore_missing_imports = true
# Разрешить динамические типы
allow_redefinition = true
# Игнорировать ошибки в некоторых файлах
warn_unreachable = true
exclude = [
    "src/app/migrations/versions/.*",
    "src/site/.*",
]
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Игнорировать mypy ошибки в миграциях
[[tool.mypy.overrides]]
module = "app.migrations.versions.*"
ignore_errors = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
